--- a/src/app/layout/layouts/classic/classic.component.html
+++ b/src/app/layout/layouts/classic/classic.component.html
@@ -3,33 +3,25 @@
 
 <!-- Navigation -->
 <fuse-vertical-navigation
-    class="dark bg-indigo-800 text-white print:hidden"
+    class="dark bg-gray-900 print:hidden"
     [mode]="isScreenSmall ? 'over' : 'side'"
     [name]="'mainNavigation'"
-    [navigation]="navigation.futuristic"
+    [navigation]="navigation.default"
     [opened]="!isScreenSmall">
     <!-- Navigation header hook -->
-    <ng-container fuseVerticalNavigationHeader>
+    <ng-container fuseVerticalNavigationContentHeader>
         <!-- Logo -->
         <div class="flex items-center h-20 p-6 pb-0">
+            <!-- Light version -->
             <img
-                class="w-30"
-                src="assets/images/logo/logo-text-on-dark.svg">
-        </div>
-    </ng-container>
-    <!-- Navigation footer hook -->
-    <ng-container fuseVerticalNavigationFooter>
-        <!-- User -->
-        <div class="flex items-center w-full px-6 py-8 border-t">
-            <user></user>
-            <div class="flex flex-col w-full ml-4 overflow-hidden">
-                <div class="w-full whitespace-nowrap text-ellipsis overflow-hidden leading-normal text-current opacity-80">
-                    {{user.name}}
-                </div>
-                <div class="w-full mt-0.5 whitespace-nowrap text-sm text-ellipsis overflow-hidden leading-normal text-current opacity-50">
-                    brian.hughes@company.com
-                </div>
-            </div>
+                class="dark:hidden w-30"
+                src="assets/images/logo/logo-text.svg"
+                alt="Logo image">
+            <!-- Dark version -->
+            <img
+                class="hidden dark:flex w-30"
+                src="assets/images/logo/logo-text-on-dark.svg"
+                alt="Logo image">
         </div>
     </ng-container>
 </fuse-vertical-navigation>
@@ -41,7 +33,6 @@
     <div class="relative flex flex-0 items-center w-full h-16 px-4 md:px-6 z-49 shadow dark:shadow-none dark:border-b bg-card dark:bg-transparent print:hidden">
         <!-- Navigation toggle button -->
         <button
-            class="mr-2"
             mat-icon-button
             (click)="toggleNavigation('mainNavigation')">
             <mat-icon [svgIcon]="'heroicons_outline:menu'"></mat-icon>
@@ -49,17 +40,9 @@
         <!-- Components -->
         <div class="flex items-center pl-2 ml-auto space-x-0.5 sm:space-x-2">
             <languages></languages>
-            <fuse-fullscreen class="hidden md:block"></fuse-fullscreen>
             <search [appearance]="'bar'"></search>
-            <shortcuts></shortcuts>
-            <messages></messages>
             <notifications></notifications>
-            <button
-                class="lg:hidden"
-                mat-icon-button
-                (click)="quickChat.toggle()">
-                <mat-icon [svgIcon]="'heroicons_outline:chat-alt-2'"></mat-icon>
-            </button>
+            <user></user>
         </div>
     </div>
 
@@ -76,6 +59,3 @@
     </div>
 
 </div>
-
-<!-- Quick chat -->
-<quick-chat #quickChat="quickChat"></quick-chat>
